--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,19 +3,23 @@
 @tailwind utilities;
 
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
+  --background: #232946;
+  --headline: #fffffe;
+  --card-background: #fffffe;
+  --card-heading: #232946;
+  --paragraph: #b8c1ec;
+  --button: #eebbc3;
+  --button-text: #232946;
+  --highlight: #eebbc3;
+  --main: #b8c1ec;
+  --tertiary: #eebbc3;
+  --stroke: #121629;
+  --error-color: #FF6B6B;
+  --success-color: #76C7C1;
 }
 
 body {
-  color: var(--foreground);
+  color: var(--paragraph);
   background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
 }
